# Scope

./: CMakeLists.txt  README.md
cmake/: Dependencies.cmake
cmake/modules/: Findtron.cmake  findtron.cmake
src/: CMakeLists.txt
src/Scope/: CMakeLists.txt  Scope.cpp  atlab_scope.h
src/common/: boxes.cpp  boxes.hpp  type.hpp  util.hpp
src/ot/: CMakeLists.txt  ffttools.hpp  fhog.cpp  fhog.hpp  kcf.cpp  kcf.hpp  kcftracker.cpp  kcftracker.hpp  recttools.hpp  tracker.h
src/test/: test_scope.cpp
test/: CMakeLists.txt
